# Intelligent-Assistant-for-Educational-Institutions

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  app_runtime.py  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  uv-linters.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feat.yml
.github/workflows/: ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
RAG/app/: app.py  main.py  vector.py
RAG/chrome_langchain_db/: chroma.sqlite3
RAG/data/: ag_news.csv
app/: main.py
chrome_langchain_db/: chroma.sqlite3
data_and_documents/: Regulation.docx
data_and_documents/from_parsers/: 07_перевод_сетевое_обучение.docx  1.1. Приказ_правила перевода БСМ.docx  1.2. Правила перевода студентов программ БСМ.docx  10. Выписка УС 30-03-2021 № 3 - Изменени..рядок выплаты именных стипендий.docx  10.18.1-01_200422-6 Итоговый документ.docx  1065315266.docx  11.Выписка УС 29.11.23 № 14-О внес.изм.в Положение об акад.мобил.docx  1130608174.docx  12. Выписка УС 26-04-2019 № 6 - Об утверждении Положения о ПУД.docx  12.Выписка УС 25.02.22 № 2-О внес.изм.в ..нир.и орг.дисц.вариат.части ООП.docx  12.Выписка УС 25.03.22 № 3-О внес.изм.в Положение о практ.подгот.студ_.docx  14. Выписка УС 09-10-2020 № 14 -Изменения_именные стипендии.docx  14. Выписка УС 21-06-2019 № 9 - О внесен..ка студенческого общежития НИУ .docx  14. Выписка УС 30-11-2018 № 12- Положени..лении скидок об оплате обучения.docx  14.Выписка УС 28.01.22 № 1-О внес.изм.в Положение о рейтинг.системе.docx  15. Выписка УС 01-02-2019 №1- об утвержд..рименения электронного обучения.docx  15.Выписка УС 24.06.22 № 7-О внес.изм.в Правила внутр.распор.студ.общежит..docx  15.Выписка УС 25.06.2025 № 8-О внес.изм.в Концепцию разв.цифр.компет_.docx  16. Выписка УС 26-04-2019 № 6 - О внесен..треннего распорядка обучающихся.docx  16.Выписка УС 17.12.21 № 14-Об утв.Положения о стипенд.обеспеч..docx  16.Выписка УС 25.06.2025 № 8-О внес.изм...ю разв.инояз.коммуникат.компет_.docx  17. Выписка УС 01-02-2019 №1- Порядок перевода.docx  17.Выписка УС 17.12.21 № 14-Об утв.Положения об учеб.планах ОП БАК МАГ СПЕЦ.docx  18. Выписка УС 01-02-2019 №1-.docx  18. Выписка УС 24-04-2020 № 7-именные стипендии.docx  18. Выписка УС 29.09.2021 № 11-О внес.из..акт.подготовке студентов ООП ВО.docx  1О внесении изменений в Правила внутренне..льного исследовательского унив.docx  1О внесении изменений в Правила внутреннего распорядка обучающихся НИУ ВШЭ.docx  1Положение о скидках в 2018_изм  и доп  18 10 2017_ПУ+.docx  1Регламент организации перехода студентов с платного обучения на бесплатное.docx  2. Выписка УС 28.06.2021 № 8-Об утв.Поло..учения по части ОП ВО в НИУ ВШЭ.docx  20.Выписка УС 21.12.22 № 12-О внес.изм.в Правила внутр.распор.студ.общежит..docx  20.Выписка УС 26.11.21 № 13-Положение о скидках иностр.гражд.-2022.docx  2019_Положение о ПУД_на ректорат_испр.УД.docx  2019_Приказ О введении в действие Положения о ПУД_испр.ПУ_испр.УД.docx  210623_Положение о скидках ИГ_2020.doc  210623_Положение о скидках ИГ_2020.docx  210623_Положение о скидках ИГ_2021.doc  210623_Положение о скидках ИГ_2021.docx  210623_Положение о скидках ИГ_2022.doc  (+455 more)
data_and_documents/student_handbook/POPATKUS/: FAQ_about_POPATKUS_revision.docx
data_and_documents/student_handbook/about_money/: 2Регламент организации  перехода студенто..о обучения на бесплатное_итог..docx  6.18-01_310325-17 Приложение 1.docx  6.18.1-01_180423-1 Итоговый документ.docx  payment.docx  payment2.docx  pdf24_converted (1).docx  www-hse-ru-data-2025-12-26-200399822-%D0%9A%D1%83%D1%80%D0%B0%D1%82%D0%BE%D1%80%....docx  www-hse-ru-scholarships-academic....docx  www-hse-ru-scholarships-alfa....docx  www-hse-ru-scholarships-contact_persons....docx  www-hse-ru-scholarships-expostart....docx  www-hse-ru-scholarships-gazprombank....docx  www-hse-ru-scholarships-government_prioritet....docx  www-hse-ru-scholarships-grants....docx  www-hse-ru-scholarships-lgota....docx  www-hse-ru-scholarships-lukoil....docx  www-hse-ru-scholarships-mosgovt....docx  www-hse-ru-scholarships-name_mon....docx  www-hse-ru-scholarships-name_new....docx  www-hse-ru-scholarships-need....docx  www-hse-ru-scholarships-orphans....docx  www-hse-ru-scholarships-potanin....docx  www-hse-ru-scholarships-president_forstudyingabroad....docx  www-hse-ru-scholarships-president_prioritet....docx  www-hse-ru-scholarships-social_scholarship_new....docx  www-hse-ru-scholarships-stud_apos....docx  www-hse-ru-scholarships-stud_finsupport....docx  www-hse-ru-scholarships-transport....docx  www-hse-ru-scholarships-window....docx  www-hse-ru-scholarships-window_1....docx  www-hse-ru-studyspravka-Skidki....docx  www-hse-ru-studyspravka-credit....docx  www-hse-ru-studyspravka-perbud....docx  www-hse-ru-studyspravka-rate....docx  ~$w-hse-ru-scholarships-stud_finsupport....docx  ~$едоставление скидок в.docx  ~$идки на оплату обучения для студентов НИУ ВШЭ.docx  ~$йтинг и другие показатели сравнения результатов обучения студентов.docx  ~$нтр стипендиальных и благотворительных программ.docx  ~$разовательный кредит с государственной поддержкой.docx  (+10 more)
deployment/production/: compose.yaml  render-env.sh
scripts/: entrypoint.sh
server/app/: main.py  vector.py
src/bot/: Dockerfile  __init__.py  api_client.py  bot.py  requirements.txt  service.py
template/: bot-control.yaml  build.yaml  check.yaml  deploy.yaml
tests/: conftest.py  test_ask.py  test_bot_all_handles.py  test_bot_crud.py  test_bot_handlers_common.py  test_bot_script_imports.py  test_bot_service.py  test_document_ingestion.py  test_health.py  test_rag.py  test_server_config.py  test_vector_hybrid.py
(+94 files in other folders)
