[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-assistant-for-educational-institutions"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.124.4",
    "starlette==0.50.0",
    "httpx==0.27.2",
    "uvicorn==0.30.5",
    "pydantic",
    "sqlalchemy",
    "sqlmodel~=0.0.27",
    "asyncpg",
    "aiosqlite",
    "greenlet",
    "python-jose",
    "passlib",
    "bcrypt==5.0.0",
    "python-multipart==0.0.22",
    "psycopg2-binary==2.9.11",
    "click>=8.1.7,<9",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=1.1.0",
    "pandas>=2.3.3",
    "langchain-community>=0.4.1",
    "streamlit>=1.53.0",
    "langchain-classic>=1.0.1",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "protobuf>=6.33.5",
    "langchain-core>=1.2.11",
    "pypdf>=6.8.0",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "isort==5.13.2",
    "pre-commit==4.5.0",
    "pytest==9.0.2",
    "pytest-cov>=5.0.0",
    "ruff==0.14.9",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
include = ["server*", "client*", "bot*"]
exclude = ["tests*", "docs*", "reports*", "EVIDENCE*", "security*", "htmlcov*"]

[tool.setuptools.package-data]
server = ["data/*.csv"]


[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "I"]
target-version = "py311"
exclude = ["venv", ".venv", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*import python_multipart.*:PendingDeprecationWarning",
]
